<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Student">
        <menu>
            <item
                android:id="@+id/study_table"
                android:icon="?android:attr/actionModePasteDrawable"
                android:title="@string/schedule"/>
            <item
                android:id="@+id/free_places"
                android:icon="@android:drawable/presence_online"
                android:title="@string/free_halls"/>
        </menu>
    </item>

    <item android:title="Events">
        <menu>
            <item
                android:id="@+id/creat_events"
                android:title="Creat events"
                android:icon="@android:drawable/ic_menu_edit"
                />
            <item
                android:id="@+id/events"
                android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/events"/>

        </menu>

    </item>


    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="?attr/actionModeShareDrawable"
                android:title="@string/share_app"/>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings"/>
        </menu>
    </item>
</menu>
